CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_16_20252112_1501.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=16 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_const_while.exe aco_cuda_global_while.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=16 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while.cu(975): error: argument of type "const double *" is incompatible with parameter of type "double *"
      evaporatePheromones_dev(pheromon);
                              ^

1 error detected in the compilation of "aco_cuda_global_while.cu".
aco_cuda_global_while.cu
========== COMPILATION END ========== 
Exit code: 2 
